--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "ts-node-dev src/server.ts",
-		"typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+		"typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx --quiet",
+		"lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.12",
 		"@types/jsonwebtoken": "^8.5.2",
 		"@types/uuid": "^8.3.0",
+		"@typescript-eslint/eslint-plugin": "^4.28.0",
+		"@typescript-eslint/parser": "^4.28.0",
+		"eslint": "^7.29.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-prettier": "^3.4.0",
+		"prettier": "^2.3.2",
 		"ts-node-dev": "^1.1.6",
 		"typescript": "^4.3.4"
 	},
